# Pytorch_CPP

./: CMakeLists.txt  README.md  sample.cpp  torch_test.cpp
Build2/: CMakeCache.txt  Makefile  cmake_install.cmake  sample
